--- a/lec2-task/src/app/products/product/product.component.scss
+++ b/lec2-task/src/app/products/product/product.component.scss
@@ -1,18 +1,24 @@
 /*.products{
     display: inline-flex;
-    
+
 }*/
-.productItem{
-    display: flex;
-    flex-direction: column;
+.product-item{
+    flex-direction: row;
+    flex-wrap: wrap;
     align-items:  center;
 }
-.productItem img{
+
+.available{
+background-color: aqua;
+}
+
+.product-img{
     object-fit: cover;
     width: 100%;
 }
+
 .productItem :nth-child(2) span{
-    color: gray;
-    font-size: 2rem;
-    text-align: center;
+  color: gray;
+  font-size: 2rem;
+  text-align: center;
 }
