--- a/lec2-task/src/app/products/products.component.html
+++ b/lec2-task/src/app/products/products.component.html
@@ -2,7 +2,5 @@
     (filterChangedEvent)="onFilterChanged($event)"></filter-root>
 <h1>Our Products</h1>
 <div class="productsSection">
-    <ng-container *ngFor="let product of getProducts()">
-        <productItem-root [productItem]="product" *ngIf="shouldBeViewed(product)"></productItem-root>
-    </ng-container>
+    <productItem-root [products]="getProducts()"></productItem-root>
 </div>
