--- a/lec2-task/src/app/products/product/product.component.scss
+++ b/lec2-task/src/app/products/product/product.component.scss
@@ -2,6 +2,16 @@
     display: inline-flex;
 
 }*/
+:host{
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    margin: 0 auto;
+    row-gap: 100px;
+    column-gap: 100px;
+    padding: 5%;
+}
+
+
 .product-item{
     flex-direction: row;
     flex-wrap: wrap;
